--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.avv.superheroesmarvel">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
     <application
         android:name="application.SuperheroesRF"
         android:allowBackup="true"
@@ -14,26 +14,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SuperheroesMarvel">
+        android:theme="@style/Theme.SuperheroesMarvel"
+        tools:targetApi="31">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name="ui.SplashScreen"
+            android:name="ui.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="ui.Login"
-            android:exported="true">
-        </activity>
+
         <activity
             android:name="ui.MainActivity"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name="ui.SplashScreen"
+            android:exported="true">
+        </activity>
     </application>
+
 </manifest>
